syntax = "proto3";

package tt.fsd.proto;

message SuperPodDescriptor {
    message Pod {
      int32 pod_id = 1;
      string pod_type = 2;
    }

    message Pods {
        repeated Pod pod = 1;
    }

    message Port {
        int32 pod_id = 1;
        int32 tray_id = 2;
        int32 port_id = 3;
    }

    message Connection {
        Port p_a = 1;
        Port p_b = 2;
    }

    message PortConnections {
        repeated Connection connections = 1;
    }

    Pods pods = 1;
    map<string, PortConnections> port_type_connections = 2;
}
